# mx-gestures

./: .gitignore  AppIcon.icns  Cargo.toml  LICENSE  README.md  gen-icon.py  make-app.sh
src/: actions.rs  config.rs  gesture.rs  hidpp.rs  main.rs  tray.rs
