[package]
name = "mx-gestures"
version = "0.1.0"
edition = "2024"
description = "MX Master 2S gesture button → macOS trackpad-style gestures (Spaces, Mission Control, App Exposé)"
license = "MIT"

[dependencies]
hidapi = "2"
core-graphics = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
