[package]
name = "mx-gestures"
version = "0.2.1"
edition = "2024"
description = "MX Master 2S gesture button → macOS trackpad-style gestures (Spaces, Mission Control, App Exposé)"
license = "MIT"

[dependencies]
hidapi = "2"
core-graphics = "0.24"
core-foundation = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.21"
tao = "0.34"

[profile.release]
opt-level = "z"
lto = true
strip = true
